Tweak footer height to avoid vertical scrollbar.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -13,7 +13,7 @@ body {
     bottom: 0;
     width: 100%;
     /* Set the fixed height of the footer here */
-    height: 81px;
+    height: 84px;
     color: #AAA;
     border-top: 1px solid #eee;
 }
